--- a/playbooks/install-node-app.yml
+++ b/playbooks/install-node-app.yml
@@ -49,7 +49,12 @@
       register: install_package
     # - name: "Gerenciador node pm2" #task 1.d.ii
 
-    - name: "Rodar a app" #task 1.d.iii - torna a aplicação disponível para rodar
-      command: pm2 start "{{path_app}}"/"{{app_name}}"/app.js
-      become: yes
+    # - name: "Rodar a app" #task 1.d.iii - torna a aplicação disponível para rodar
+    #   command: pm2 start "{{path_app}}"/"{{app_name}}"/app.js
+    #   become: yes
+    - name: Delete old pm2 process
+      command: pm2 delete ws-node
+      ignore_errors: yes
 
+    - name: Start pm2
+      command: pm2 start {{path_app}}/{{app_name}}/app.js
